# gesture-controlled-drone

./: .gitignore  README.md  requirements.txt
src/gesture_drone_sim/: CMakeLists.txt  package.xml  setup.py
src/gesture_drone_sim/config/: controllers.yaml  gazebo_params.yaml  ros2_control.yaml
src/gesture_drone_sim/gesture_drone_sim/: CMakeLists.txt  __init__.py  gesture_control.py  gesture_drone_controller.py  keypoint_classifier.py  package.xml
src/gesture_drone_sim/gesture_drone_sim/launch/: gesture_drone_sim.launch.py
src/gesture_drone_sim/launch/: gesture_drone_sim.launch.py
src/gesture_drone_sim/resource/: gesture_drone_sim
src/gesture_drone_sim/scripts/: gesture_drone_controller.py
src/gesture_drone_sim/urdf/: gesture_drone.urdf.xacro
